# stankin-lb1

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  build32.bat  compile_commands.json  fmt.sh  lint.sh  regen_cmake.bat  regen_cmake.sh  regen_cmake32.bat  rerun.ps1  run.bat  run.sh
.ccls-cache/@@home@greentea@Projects@C@database/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm@errno.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@flt-eval-method.h.blob  @usr@include@bits@fp-fast.h.blob  @usr@include@bits@fp-logb.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@libm-simd-decl-stubs.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@math-vector.h.blob  @usr@include@bits@mathcalls-helper-functions.h.blob  @usr@include@bits@mathcalls.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-least.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@stdio.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@stdlib-bsearch.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@struct_mutex.h.blob  @usr@include@bits@struct_rwlock.h.blob  @usr@include@bits@thread-shared-types.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@types@FILE.h.blob  @usr@include@bits@types@__FILE.h.blob  @usr@include@bits@types@__fpos64_t.h.blob  @usr@include@bits@types@__fpos_t.h.blob  (+41 more)
.ccls-cache/@home@greentea@Projects@C@database/: src@main.c.blob
include/: defs.h  get.h  parse.h  table.h
src/: get.c  main.c  parse.c  table.c  table_find.c  table_sort.c
